<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<name>Java Fluent JPA</name>
	<groupId>co.streamx.fluent</groupId>
	<artifactId>fluent-jpa</artifactId>
	<version>2.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>
	<url>https://github.com/streamx-co/FluentJPA</url>

	<description>Fluent query implementation for JPA repositories</description>

	<organization>
		<name>Streamx</name>
		<url>http://www.streamx.co</url>
	</organization>

	<developers>
		<developer>
			<id>kostat</id>
			<name>Konstantin Triger</name>
			<email>kostat@streamx.co</email>
			<roles>
				<role>Creator</role>
				<role>Java Developer</role>
			</roles>
		</developer>
	</developers>

	<licenses>
		<license>
			<name>GNU Lesser General Public License, Version 3.0</name>
			<url>https://www.gnu.org/licenses/lgpl-3.0.en.html</url>
		</license>
	</licenses>
	
	<scm>
        <connection>scm:git:git@github.com:streamx-co/FluentJPA.git</connection>
        <developerConnection>scm:git:git@github.com:streamx-co/FluentJPA.git</developerConnection>
        <url>scm:git:git@github.com:streamx-co/FluentJPA.git</url>
        <tag>HEAD</tag>
    </scm>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<!-- Import dependency management from Spring Boot -->
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring.boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.flywaydb</groupId>
				<artifactId>flyway-core</artifactId>
				<version>${flyway.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.hibernate.orm</groupId>
			<artifactId>hibernate-core</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
	        <groupId>org.junit.jupiter</groupId>
	        <artifactId>junit-jupiter-api</artifactId>
	        <scope>test</scope>
	    </dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-commons</artifactId>
            <!--<version>${junit-platform.version}</version>-->
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-launcher</artifactId>
            <!-- Override Spring-Boot choice for Eclipse -->
            <!--<version>${junit-platform.version}</version>-->
            <scope>test</scope>
        </dependency>
		<dependency>
		  <groupId>jakarta.persistence</groupId>
		  <artifactId>jakarta.persistence-api</artifactId>
		  <scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.38</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>

			<exclusions>
				<exclusion>
					<groupId>junit</groupId>
					<artifactId>junit</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-core</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>co.streamx.fluent</groupId>
            <artifactId>ex-tree</artifactId>
			<version>${ex-tree.version}</version>
		</dependency>
		<dependency>
			<groupId>co.streamx.fluent</groupId>
			<artifactId>jpa-notations</artifactId>
			<version>${jpa-notations.version}</version>
		</dependency>
		<dependency>
			<groupId>co.streamx.fluent</groupId>
			<artifactId>sql-grammar</artifactId>
			<version>${sql-grammar.version}</version>
			<scope>test</scope>
		</dependency>
		<!--<dependency>
            <groupId>com.auth0</groupId>
            <artifactId>java-jwt</artifactId>
            <version>${jwt.version}</version>
        </dependency>-->
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>17</source>
					<target>17</target>
					<compilerArgs>
						<arg>-proc:full</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
<!--				<version>3.1.2</version>-->
			</plugin>

			<!--<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.13</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin>-->

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<configuration>
					<autoVersionSubmodules>true</autoVersionSubmodules>
					<useReleaseProfile>false</useReleaseProfile>
					<releaseProfiles>release</releaseProfiles>
					<goals>deploy</goals>
				</configuration>
			</plugin>
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<configuration>
							<links>
								<link>https://docs.oracle.com/javase/17/docs/api</link>
							</links>
						</configuration>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>package</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	<reporting>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>findbugs-maven-plugin</artifactId>
        <version>3.0.5</version>
        <configuration>
        	<findbugsXmlOutput>false</findbugsXmlOutput>
        	<xmlOutput>false</xmlOutput>
        </configuration>
      </plugin>
    </plugins>
  </reporting>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<spring.boot.version>3.4.0</spring.boot.version>
		<flyway.version>9.21.0</flyway.version>
		<ex-tree.version>2.8.4</ex-tree.version>
		<jpa-notations.version>1.0.14</jpa-notations.version>
		<sql-grammar.version>1.0.17</sql-grammar.version>
		<jwt.version>3.10.1</jwt.version>
	</properties>
</project>
